--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -6,7 +6,7 @@ $bg-dark: #353E49;
 html, body{
     margin: 0;
     padding: 0;
-    overflow: scroll;
+    overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, sans-serif;
     scroll-behavior: smooth;    
 }
@@ -15,6 +15,7 @@ main{
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: $header-height 0 auto $navbar-width;
     width: 100%;
+    overflow-y: scroll !important;
+    margin: $header-height 0 auto $navbar-width;
 }
