--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -1,9 +1,9 @@
 .landing{
     width: fit-content;
-    height: 600px;
+    height: fit-content;
     margin: auto;
     text-align: center;
-    
+
     & > h1{
         font-weight: 300;
         font-size: 48px;
