--- a/_sass/section.scss
+++ b/_sass/section.scss
@@ -1,17 +1,20 @@
 section{
     display: flex;
+    flex-direction: column;
     width: 900px;
     min-height: 500px;
     height: fit-content;
     margin: auto;
     
-    & a {
+    & > a {
         position: relative;
         top: -$header-height;
     }
 
     .section__header{
         text-align: left;
+        height: fit-content;
+        width: 100%;
         
         & h1{
             font-weight: 300;
