Updated List Styles

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,7 @@
 $header-height: 100px;
 $navbar-width: 100px;
-$bg-light: #353E49;
 $bg-dark: #353E49;
+$accent-colour: #CE7604;
 
 html, body{
     margin: 0;
