--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,7 +1,7 @@
 header  {
     position: fixed;
     top: 0;
-    height: $header-height;
+    height: 50px;
     width: 100%;
     background-color: #353E49;
     z-index: 99999;
