--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,28 +1,101 @@
 .navbar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    position: fixed;
-    top: $header-height;
-    left: 0;
-    margin: 0;
-    height: calc(100% - #{$header-height});
-    width: $navbar-width;
-    z-index: 999999;
+    position: relative;
+    width: 100%;
+    height: 100%;
 
-    & .nav-item {
-        display: block;
-        height: fit-content;
-        padding: 5px;
-        text-decoration: none;
-        color: lighten($color: $bg-dark, $amount: 50);
+    & input { 
+        display: none;
 
-        &_active{
-            border-right: solid orange 5px;
+        &:checked + label:before {
+            transform: translatey(10px) rotate(90deg);
+            transition: transform .2s ease;
         }
+
+        &:checked + label:after {
+            transform: translatey(-10px) rotate(-45deg);
+            opacity: 0;
+            transition: opacity transform .2s ease;
+        }
+
+        &:checked + label{
+            transform: translatey(0px) rotate(-45deg);
+            transition: transform .2s ease;
+        }
+
+        &:checked ~ .nav-list{
+            display: block;
+            animation: open 1s ease both;
+            & > li, a {
+                display: block;
+            }
+        }
+        
+        & + label, & + label:before, & + label:after{
+            position: absolute;
+            top: 20px;
+            left: 25px;
+            height: 5px;
+            width: 30px;
+            border-radius: 3px;
+            background: #03A9F4;
+            transition: .2s ease;
+            cursor: pointer;
+            z-index: 1;
+        }
+
+        & + label:before{
+            content:"";
+            top: -10px;
+            left: 0px;
+        }
+
+        & + label:after{
+            content:"";
+            top:10px;
+            left: 0px;
+        }
+    }
+
+    & .nav-list {
+        position: relative;
+        display: none;
+        list-style-type: none;
+        top: 50px;
+        margin: 0;
+        padding: 0;
+        animation: closed .2s both;
+        transition: .2s;
+
+        & .nav-list_item {
+            display: inline-block;
+            padding: 10px;
+            box-sizing: border-box;
+
+            &--active {
+
+            }
+        }
+    }
+
+
+    .bg-dark {
+        background-color: $bg-dark;
     }
 }
 
-.bg-dark {
-    background-color: $bg-dark;
+@keyframes open{
+    50% {
+        width: 0px;
+        height: 0px;
+    }
+    100% {
+        width: fit-content;
+        height: fit-content;
+    }
+}
+@keyframes closed{
+    0% {
+        width: 0px;
+        height: 0px;
+    }
 }
