Updated Site Layout

--- a/_sass/section.scss
+++ b/_sass/section.scss
@@ -1,10 +1,8 @@
 section{
     display: flex;
     flex-direction: column;
-    width: 900px;
-    min-height: 550px;
+    width: auto 10px;
     height: fit-content;
-    margin: auto;
 
     & .title{
         font-size: medium;
