--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,6 +1,6 @@
 header  {
-    position: fixed;
-    top: 0;
+    position: sticky;
+    top: 0px;
     height: 50px;
     width: 100%;
     background-color: #353E49;
