--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -11,7 +11,7 @@
         &Img {
             display: block;
             border-radius: 100%;
-            margin: auto;
+            margin: auto 10px;
             max-width: 200px;
         }
 
@@ -31,6 +31,8 @@
 
     &_main {
         grid-area: main;
+        margin: auto;
+        width: 500px;
     }
 
     & > h1{
