--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -1,14 +1,13 @@
 .project_tiles{
     display: flex;
-    flex-flow: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
 }
 .project_tile{
     position: relative;
     overflow: hidden;
     transition: opacity .2s ease;
-    height: 200px;
     min-width: 200px;
+    background-color: $accent-colour;
 
     &--small{
         flex-grow: 1;
@@ -17,32 +16,44 @@
     &--large{
         flex-grow: 2;
     }
-
+    
     & > a {
         display: block;
         height: 100%;
         width: 100%;
         text-decoration: none;
         color: black;
-    }
-
-    & > a > img{
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
+        
+        & > span{
+            position: absolute;
+            background-color: #0001;
+            color: white;
+            padding: 20px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: background-color .2s ease;
+            z-index: 2;
+        }
+        & > img{
+            position: relative;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;    
+            z-index: 1;
+        }
     }
 
     &:hover{
         opacity: 0.3;
+
+        & > a > span {
+            background-color: #000a;
+            transition: background-color .2s ease;
+        }
     }
 
     &-title{
-        display: inline-block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        text-align: center;
+        margin: auto;
     }
 }
