--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,20 +3,25 @@
     <head>
         <title>TWDay</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/assets/academicons-1.8.0/css/academicons.min.css">
         <link rel="icon" type="image/png" href="/assets/images/Website-Icon.png" />
         <link rel="stylesheet" href="/assets/css/style.css">
+        <link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         {% feed_meta %}
         {% seo %}
     </head>
     <body>
         {% include header.html %}
-        <main>
-            {{ content }}
-        </main>
-        {% include footer.html %}
+        <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
+            <main class="main-content" id="main-content">
+                {{ content }}
+            </main>
+            {% include footer.html %}
+        </div>
     </body>
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
     <script src="/assets/js/main.js"></script>
     <script src="https://use.fontawesome.com/cd4903d595.js"></script>
 </html>
