--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -1,63 +1,3 @@
-.project_tiles{
-    display: grid;
-    grid-auto-flow: dense;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-}
-.project_tile{
-    position: relative;
-    overflow: hidden;
-    transition: opacity .2s ease;
-    min-width: 200px;
-    background-color: $accent-colour;
-
-    &--small{
-        grid-column: span 1;
-        grid-row: span 1;
-    }
-
-    &--large{
-        grid-column: span 2;
-        grid-row: span 2;
-    }
-    
-    & > a {
-        display: block;
-        height: 100%;
-        width: 100%;
-        text-decoration: none;
-        color: black;
-        
-        & > span{
-            position: absolute;
-            background-color: #0001;
-            color: white;
-            padding: 20px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            transition: background-color .2s ease;
-            z-index: 2;
-        }
-        & > img{
-            position: relative;
-            height: 100%;
-            width: 100%;
-            object-fit: cover;    
-            z-index: 1;
-        }
-    }
-
-    &:hover{
-        opacity: 0.3;
-
-        & > a > span {
-            background-color: #000a;
-            transition: background-color .2s ease;
-        }
-    }
-
-    &-title{
-        margin: auto;
-    }
+.image-list{
+    column-count: 3;
 }
