--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,29 @@
-<header>
-    <nav class="navbar">
-        <input type="checkbox" id="hamburger"/>
-        <label for="hamburger"></label>
-        
-        <ul class="nav-list">
-            {% for item in site.data.navigation %}
-            <li class="nav-list_item {% if page.url == item.link %} nav-list_item--active{% endif %}">
-                <a href="{{ item.link }}"> {{ item.name }} </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </nav>
+<header class="mdc-top-app-bar app-bar mdc-theme--primary-bg" id="app-bar">
+    <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+            <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
+            <span class="mdc-top-app-bar__title mdc-theme--on-primary">{{ site.title }}</span>
+        </section>
+    </div>
 </header>
+<aside class="mdc-drawer mdc-drawer--dismissible mdc-top-app-bar--fixed-adjust" id="drawer">
+    <div class="mdc-drawer__content">
+        <nav class="mdl-list">
+            {% for item in site.data.navigation %}
+            <a class="mdc-list-item {% if page.url == item.link %}mdc-list-item--activated" aria-current="page"{% else %}"{% endif %} href="{{ item.link }}">
+                {% if item.icon %}
+                    <i class="material-icons mdc-list-item__graphic" aria-hidden="true">{{item.icon}}</i>
+                {% endif %}
+                <span class="mdc-list-item__text"> {{ item.name }} </span>
+            </a>
+            {% endfor %}
+            <!--<hr class="mdc-list-divider">
+            <h6 class="mdc-list-group__subheader">Projects</h6>
+            {% for project in site.projects %}
+            <a class="mdc-list-item" href="{{project.url}}">
+                <span class="mdc-list-item__text">{{project.title}}</span>
+            </a>
+            {% endfor %}-->
+        </nav>
+    </div>
+</aside>
