--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,31 +1,8 @@
-/* Color Theme Swatches in Hex */
-$Software-1-hex: #101240;
-$Software-2-hex: #132640;
-$Software-3-hex: #1D4859;
-$Software-4-hex: #3FBF9B;
-$Software-5-hex: #4BF2B5;
-
-/* Color Theme Swatches in RGBA */
-$Software-1-rgba: rgba(15,18,63, 1);
-$Software-2-rgba: rgba(19,38,63, 1);
-$Software-3-rgba: rgba(29,72,89, 1);
-$Software-4-rgba: rgba(63,191,154, 1);
-$Software-5-rgba: rgba(75,242,180, 1);
-
-/* Color Theme Swatches in HSLA */
-$Software-1-hsla: hsla(236, 60, 15, 1);
-$Software-2-hsla: hsla(213, 53, 16, 1);
-$Software-3-hsla: hsla(196, 50, 23, 1);
-$Software-4-hsla: hsla(163, 50, 49, 1);
-$Software-5-hsla: hsla(157, 86, 62, 1);
-
-$navbar-width: 100px;
-$bg-dark: $Software-1-hex;
-$bg-light: $Software-2-hex;
-$header-colour: $Software-2-hex;
-$font-colour: $Software-4-hex;
-$accent-colour: $Software-3-hex;
-
+@use "@material/theme" with (
+    $primary: #fcb8ab,
+    $secondary: #feeae6,
+);
+@use "material-components-web";
 
 html, body{
     height: 100%;
@@ -34,8 +11,13 @@ html, body{
     padding: 0;
     overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, sans-serif;
-    color: $font-colour;
     scroll-behavior: smooth;    
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 main{
@@ -46,10 +28,17 @@ main{
     margin: auto;
 }
 
-.bg_dark{
-    background-color: $bg-dark;
+.app-bar{
+    position: absolute;
 }
-.bg_light{
-    background-color: $bg-light;
+.mdc-top-app-bar{
+    z-index: 7 !important;
 }
-
+.mdc-drawer-app-content{
+    flex: auto;
+    position: relative;
+}
+.main-content {
+    overflow: auto;
+    height: 100%;
+}
