--- a/_sass/section.scss
+++ b/_sass/section.scss
@@ -1,4 +1,4 @@
-section{
+.page-section{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -53,7 +53,6 @@ section{
             font-weight: 300;
             font-size: 30px;
             & > span{
-                color: $accent-colour;
             }
         }
     }
