Swapped to Bootstrap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="text-dark">
     <div class="footer-details">
         {{ site.title }} | 2020
         {% include social-media.html %}
