--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,23 +5,23 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/assets/academicons-1.8.0/css/academicons.min.css">
-        <link rel="icon" type="image/png" href="/assets/images/Website-Icon.png" />
+        <link rel="icon" type="image/png" href="{{ 'assets/images/Website-Icon.png' | relative_url }}" />
         <link rel="stylesheet" href="/assets/css/style.css">
-        <link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         {% feed_meta %}
         {% seo %}
     </head>
-    <body>
+    <body class="d-flex flex-column min-vh-100 bg-light">
         {% include header.html %}
-        <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
-            <main class="main-content" id="main-content">
-                {{ content }}
-            </main>
-            {% include footer.html %}
-        </div>
+        <main class="container flex-grow-1">
+            {{ content }}
+        </main>
+        {% include footer.html %}
     </body>
-    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
     <script src="https://use.fontawesome.com/cd4903d595.js"></script>
 </html>
