--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,9 +1,19 @@
 html, body{
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, sans-serif;
-    scroll-behavior: smooth;    
+    scroll-behavior: smooth;
+}
+
+main {
+	--bs-gutter-x: 1.5rem;
+	--bs-gutter-y: 0;
+	width: 100%;
+	padding-right: calc(var(--bs-gutter-x)* .5);
+	padding-left: calc(var(--bs-gutter-x)* .5);
+	margin-right: auto;
+	margin-left: auto;
 }
