--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -5,6 +5,7 @@ footer{
     .footer-details{
         margin: auto;
         height: 100%;
-        width: fit-content;
+        width: 250px;
+		text-align: center;
     }
 }
