--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,15 +1,12 @@
-header  {
-    position: sticky;
-    top: 0px;
+.navmenu {
     height: 50px;
     width: 100%;
-    background-color: $header-colour;
-    z-index: 99999;
+	padding: 0px 12px;
 }
 
 .header__title{
     height: fit-content;
-    margin: auto auto auto $navbar-width;
+    margin: auto;
     text-align: center;
     font-weight: lighter;
 
@@ -18,7 +15,7 @@ header  {
         width: fit-content;
         font-size: xx-large;
     }
-    
+
     &--post{
         margin: auto;
         width: fit-content;
