--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -1,63 +1,97 @@
 .landing{
-    display: grid;
-    margin: auto;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 'profile main';
+	--bs-gutter-x: 1.5rem;
+	--bs-gutter-y: 0;
+	display: flex;
+	padding: 0 1.5rem !important;
+	gap: 0 	!important;
+	margin: auto;
+	width: 100%;
 
-    &_profile {
-        grid-area: profile;
-        margin: auto;
-        
-        &Img {
-            display: block;
-            border-radius: 100%;
-            margin: 20px 10px;
-            max-width: 300px;
-        }
+	@media (max-width: 767.98px){
+		row-gap: 3rem !important;
+		column-gap: 0 !important;
+		flex: 1 0 0%;
+		flex-direction: column;
+	}
 
-        & h1 {
-            text-align: center;
-            font-size: large;
-            font-weight: light;
-        }
-        
-        & h2 {
-            text-align: center;
-            font-size: medium;
-            font-weight: light;
-        }
-        
-    }
+	@media (min-width: 768px){
+		flex-wrap: wrap;
+		flex-direction: row;
+		row-gap: 0 !important;
+		column-gap: 3rem !important;
+	}
 
-    &_main {
-        grid-area: main;
-        margin: auto;
-        width: 500px;
-    }
+	&--photo{
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
-    & > h1{
-        font-weight: 300;
-        font-size: 48px;
-        margin: 20px 0px;
-    }
-    & > h2{
-        font-size: 24px;
-        font-weight: 100;
-    }
-    & > h3{
-        font-size: 20px;
-        font-weight: 100;
-    }
-    & > span{
-        line-height: 24px;
-        
-        & > a{
-            text-decoration: none;
-            height: 24px;
-            line-height: 24px;
-            color: black;
-            margin: 0px 20px;
-            font-size: 24px;
-        }
-    }
+		@media (min-width: 768px) {
+			flex: 1 0 0%;
+		}
+	}
+
+	&--title{
+		flex: 1 0 0%;
+
+		@media (max-width: 320px) {
+			& h1 {
+				font-size: 1.25rem;
+			}
+
+			& h2 {
+				font-size: 1rem;
+			}
+		}
+
+		@media (min-width: 320.02px) and (max-width: 425px) {
+			& h1 {
+				font-size: 1.5rem;
+			}
+
+			& h2 {
+				font-size: 1.25rem;
+			}
+		}
+
+		@media (min-width: 425.02px) and (max-width: 768px) {
+			& h1{
+				font-size: 1.75rem;
+			}
+
+			& h2{
+				font-size: 1.4rem;
+			}
+		}
+
+		@media (min-width: 768.02px) and (max-width: 1024px) {
+			& h1 {
+				font-size: 2rem;
+			}
+
+			& h2 {
+				font-size: 1.5rem;
+			}
+		}
+
+		@media (min-width: 1024.02px) and (max-width: 1440px) {
+			& h1 {
+				font-size: 2.5rem;
+			}
+
+			& h2 {
+				font-size: 2rem;
+			}
+		}
+
+		@media (min-width: 1440.02px) and (max-width: 2560px) {
+			& h1 {
+				font-size: 4rem;
+			}
+
+			& h2 {
+				font-size: 3em;
+			}
+		}
+	}
 }
