--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,34 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-        <title>TWDay</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/assets/academicons-1.8.0/css/academicons.min.css">
-        <link rel="icon" type="image/png" href="{{ 'assets/images/Website-Icon.png' | relative_url }}" />
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        {% feed_meta %}
-        {% seo %}
-    </head>
-    <body class="d-flex flex-column min-vh-100 bg-light">
-        {% include header.html %}
-        <main class="container flex-grow-1">
-            {{ content }}
-        </main>
-        {% include footer.html %}
-    </body>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
-    <script src="https://use.fontawesome.com/cd4903d595.js"></script>
+
+<head>
+	<title>TWDay</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/assets/academicons-1.8.0/css/academicons.min.css">
+	<link rel="icon" type="image/png" href="{{ 'assets/images/Website-Icon.png' | relative_url }}" />
+	<link rel="stylesheet" href="/assets/css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	{% feed_meta %}
+	{% seo %}
+</head>
+
+<body class="d-flex flex-column min-vh-100 bg-light">
+	{% include header.html %}
+	<main class="flex-grow-1">
+		{{ content }}
+	</main>
+	{% include footer.html %}
+</body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+	crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+	crossorigin="anonymous"></script>
+<script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+<script src="https://use.fontawesome.com/cd4903d595.js"></script>
+
 </html>
